Отображение маршрута на карте

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,8 @@
   <title>Map Route</title>
 </head>
 
-<body>
+<body style="margin: 0;">
   <div id="root"></div>
   <script src="bundle.js"></script>
 </body>
 </html>
-
